style: set inherit width on recipe collapse, prevent text overflow

--- a/src/App.scss
+++ b/src/App.scss
@@ -1,13 +1,3 @@
-// .save-Btn {
-//   margin-top: 0;
-//   margin-bottom: 0;
-//   border-radius: 5px;
-//   padding: 8px;
-//   font-size: 1.6em;
-//   font-weight: 800;
-//   color: #400080;
-//   background: yellow;
-//   outline: none;
-//   box-shadow: 3px 2px 4px #000;
-//   border: none;
-// }
+.recipe_collapse {
+    width: inherit; 
+}
